# cub3d

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  Makefile.mk  README.md  cub3d.h  detect_event.c  ft.c  install_minilibx.sh  load_file.c  main.c  set_array_from_file.c  valid_argument.c
.github/workflows/: c-cpp.yml  cpp_test.yml  norminette.yaml  site_deploy.yml
assets/: Crafting_Table.xpm  Diamond_Ore.xpm  TNT.xpm  east.xpm  east_compass.xpm  north.xpm  south.xpm  south_compass.xpm  west.xpm  west_compass.xpm
assets/test/: bad_no_extension_xpm
cmd/cub3D/: cub3d.h  detect_event.c  get_conf_and_map.c  hooks.c  init_cleanup.c  init_data.c  main.c  map_utils.c  output_map_info.c  set_array_from_file.c  split_cub.c  update_screen.c  valid_argument.c
cmd/cub3D/algo/: digital_differential_analyzer.c
cmd/cub3D/map_validation/: example.c  map_validation.c  map_validation_util.c
cmd/cub3D/movement/: detect_wall_by_dda.c  trig_degree.c  update_angle.c  update_coodinate.c
cmd/cub3D/parse_cub/: get_color.c  get_conf.c  get_conf_and_map.c  get_conf_util.c  get_map.c  get_player.c  parse_cub.c  read_loop.c  set_array_from_file.c  split_cub.c
cmd/cub3D/rendering/: base_render.c  mlx_urils.c  pick_texture_color.c  put_color.c  render_background.c  render_walls.c
cmd/cub3D/validation/: map_validation.c  map_validation_util.c  validation.c
examples/: bad_invaild_texture.cub  good_diamond.cub  good_grass.cub  good_simple.cub  good_subject.cub  good_tnt.cub  simple.cub  test2.cub  test3.cub  test5.cub  test6.cub  test7.cub
examples/bad/: color_invalid_rgb.cub  color_missing.cub  color_missing_ceiling_rgb.cub  file_letter_end.cub  filetype_wrong.buc  forbidden.cub  map_middle.cub  player_on_edge.cub  textures_duplicates.cub  textures_not_xpm.cub  wall_hole_west.cub
examples/good/: good_differ_order.cub  good_linebreaks.cub  good_mix.cub  good_no_linebreak.cub  good_pos_top.cub  good_scatter1.cub  good_scatter2.cub  good_subject_map.cub  good_with_vacant.cub
examples/test/: bad_color_missing_floor_rgb.cub  bad_color_none.cub  bad_map_first.cub  bad_map_missing.cub  bad_map_too_small.cub  bad_player_multiple.cub  bad_player_none.cub  bad_textures_dir.cub  bad_textures_forbidden.cub  bad_textures_invalid.cub  bad_textures_missing.cub  bad_wall_hole_east.cub  bad_wall_hole_north.cub  bad_wall_hole_south.cub  bad_wall_none.cub  good_big_height.cub  good_big_width.cub  good_differ_order.cub  good_linebreaks.cub  good_mix.cub  good_no_linebreak.cub  good_pos_bottom.cub  good_pos_left.cub  good_pos_right.cub  good_scatter1.cub  good_scatter2.cub  good_too_spaces.cub
include/: cub3d.h  example.h  libft.h
pkg/libft/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstmap.c
tests/: CMakeLists.txt  test_example.cpp  test_map_utils.cpp  test_map_validation.cpp  test_valid_argument.cpp
tests/parse_cub/: compare_operators.h  compare_operators.hpp  test_get_conf.cpp  test_get_map.cpp  test_main.cpp  test_parse_cub.cpp  test_parse_cub_invalid.cpp  test_parse_cub_valid.cpp
tests/validation/: test_map_validation.cpp
